<resources>
    <string name="app_name">ATB</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Donor Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_request">Request</string>
    <string name="action_sign_up">SignUp</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="blood_spinner_header">Blood Group</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">View Requests</string>
    <string name="title_home">Request Blood</string>
    <string name="title_dashboard">View Requests</string>
    <string name="title_notifications">Profile</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="title_activity_register">Register</string>
</resources>
